# sneks

./: README.md  pyproject.toml  tox.ini
.github/workflows/: python.yml
src/sneks/config/: config.py  definition.py
src/sneks/core/: cell.py
src/sneks/engine/: mover.py  registrar.py  runner.py  state.py
src/sneks/gui/: graphics.py  recorder.py
src/sneks/interface/: snek.py
src/sneks/validator/: main.py  test_existance.py  test_functionality.py
