[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sneks-dev"
version = "1.0.0a12"
description = "Sneks competition facilitation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache Software License"}
authors = [
    {name = "Nathaniel Schaaf", email = "nathaniel.schaaf@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygame; python_version<'3.11'",
    "pygame==2.1.3.dev8; python_version>='3.11'",
    "pytest",
]

[project.scripts]
validate = "sneks.validator.main:main"
run = "sneks.engine.runner:main"
poster = "sneks.gui.poster:main"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "tox",
    "twine",
]
record = [
    "moviepy",
]
